--- a/djangoapp/blog/templates/blog/base.html
+++ b/djangoapp/blog/templates/blog/base.html
@@ -12,7 +12,7 @@
 
     {% block content %}{% endblock content %}
     
-    {% if site_setup.pagination %}
+    {% if site_setup.show_pagination %}
       {% include 'blog/partials/_pagination.html' %}
     {% endif %}
 
